--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,15 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name=”description” content='Bạn yêu thú cưng? Muốn chăm sóc và quan tâm chúng một cách tốt nhất? Hãy để chúng tôi giúp bạn'/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="alternate" hreflang="vi-vn"
+        href="pawadise.me" />
+
     
     <!-- Latest compiled and minified CSS -->
 
