news page re-styling

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,41 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name=”description” content='Bạn yêu thú cưng? Muốn chăm sóc và quan tâm chúng một cách tốt nhất? Hãy để chúng tôi giúp bạn'/>
+    <meta
+      name="”description”"
+      content="Bạn yêu thú cưng? Muốn chăm sóc và quan tâm chúng một cách tốt nhất? Hãy để chúng tôi giúp bạn"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="alternate" hreflang="vi-vn"
-        href="pawadise.me" />
+    <link rel="alternate" hreflang="vi-vn" href="pawadise.me" />
 
-    
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3139074046668219",
+        enable_page_level_ads: true
+      });
+    </script>
     <!-- Latest compiled and minified CSS -->
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Pawadise</title>
   </head>
